[package]
name = "b64"
version = "0.1.0"
authors = ["Ioannis Vezakis"]
license = "Apache-2.0"
description = "Provides a simple one-line base64 encoding/decoding function"
categories = ["command-line-utilities"]
keywords = ["base64", "encoding", "decoding"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
